<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_border"
    android:tag="@string/with_ui"
    android:onClick="onRadioClick">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/card_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/title_share_article"
            android:textColor="@color/color_primary"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_share"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/label_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_article"
                android:textSize="8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txt_article"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:text="@string/sample_article"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@+id/line_article"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_article"
                tools:ignore="LabelFor,SmallSp" />

            <View
                android:id="@+id/line_article"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="2dp"
                android:background="@color/color_accent"
                app:layout_constraintBottom_toTopOf="@id/label_link"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/label_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_link"
                android:textSize="8sp"
                app:layout_constraintBottom_toTopOf="@id/txt_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:singleLine="true"
                android:text="@string/sample_link"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="@id/line_link"
                app:layout_constraintEnd_toStartOf="@id/fab_action"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor,SmallSp" />

            <View
                android:id="@+id/line_link"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginBottom="2dp"
                android:background="@color/color_accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/fab_action" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:elevation="0dp"
                app:fabCustomSize="20dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@android:drawable/ic_menu_share" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>