<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_req"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_req"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_req" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_req">

                <TextView
                    android:id="@+id/txt_installed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/strip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/label_colon_installed"
                    app:layout_constraintTop_toTopOf="@id/label_installed" />

                <TextView
                    android:id="@+id/txt_share_flow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/babe_this_app_target"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/label_colon_share"
                    app:layout_constraintTop_toTopOf="@+id/label_share_flow" />

                <TextView
                    android:id="@+id/label_share_flow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/share_flow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_installed" />

                <TextView
                    android:id="@+id/label_installed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/installed"
                    app:layout_constraintEnd_toEndOf="@+id/label_share_flow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_colon_installed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/colon"
                    app:layout_constraintStart_toEndOf="@+id/label_installed"
                    app:layout_constraintTop_toTopOf="@+id/label_installed" />

                <TextView
                    android:id="@+id/label_colon_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/colon"
                    app:layout_constraintStart_toEndOf="@+id/label_share_flow"
                    app:layout_constraintTop_toTopOf="@+id/label_share_flow" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_req">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_mode"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/line_select"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/color_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_select" />

            <include
                android:id="@+id/include_with"
                layout="@layout/sample_layout_with"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/center_separator"
                app:layout_constraintEnd_toStartOf="@+id/center_separator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/center_separator" />

            <View
                android:id="@+id/center_separator"
                android:layout_width="10dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line_select" />

            <include
                android:id="@+id/include_without"
                layout="@layout/sample_layout_without"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/center_separator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center_separator"
                app:layout_constraintTop_toTopOf="@+id/center_separator" />

            <RadioButton
                android:id="@+id/rb_with"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioClick"
                android:tag="@string/with_ui"
                android:text="@string/with_ui"
                app:layout_constraintEnd_toStartOf="@+id/center_separator"
                app:layout_constraintStart_toStartOf="@+id/include_with"
                app:layout_constraintTop_toBottomOf="@+id/include_with" />

            <RadioButton
                android:id="@+id/rb_without"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioClick"
                android:tag="@string/without_ui"
                android:text="@string/without_ui"
                app:layout_constraintEnd_toEndOf="@+id/include_without"
                app:layout_constraintStart_toEndOf="@+id/center_separator"
                app:layout_constraintTop_toBottomOf="@+id/include_without" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>