<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onLayoutClick"
    tools:context=".ShareActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/card_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/title_share_article"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/color_primary" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_share"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:translationY="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/label_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_article"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_article"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:autofillHints=""
                android:gravity="start"
                android:inputType="text|textCapCharacters|textMultiLine"
                android:scrollHorizontally="false"
                app:layout_constraintBottom_toTopOf="@+id/label_link"
                app:layout_constraintTop_toBottomOf="@+id/label_article"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/label_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_link"
                app:layout_constraintBottom_toTopOf="@+id/txt_address" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:autofillHints=""
                android:inputType="none"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fab_action"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="LabelFor" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:onClick="onFabAction"
                app:elevation="2dp"
                app:fabCustomSize="40dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_address"
                app:srcCompat="@android:drawable/ic_menu_share" />

            <RelativeLayout
                android:id="@+id/layout_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone">

                <com.github.ybq.android.spinkit.SpinKitView
                    style="@style/SpinKitView.Large.FadingCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    app:SpinKit_Color="@color/color_primary" />

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>